[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 403.958
margin_top = 108.679
margin_right = 511.958
margin_bottom = 366.679
custom_constants/separation = 100

[node name="Title" type="Label" parent="VBox"]
margin_right = 108.0
margin_bottom = 14.0
text = "Client"
align = 1
valign = 1

[node name="HBox" type="HBoxContainer" parent="VBox"]
margin_top = 114.0
margin_right = 108.0
margin_bottom = 138.0

[node name="NameLabel" type="Label" parent="VBox/HBox"]
margin_top = 5.0
margin_right = 46.0
margin_bottom = 19.0
text = "Name: "

[node name="LineEdit" type="LineEdit" parent="VBox/HBox"]
margin_left = 50.0
margin_right = 108.0
margin_bottom = 24.0
text = "Player"

[node name="JoinButton" type="Button" parent="VBox"]
margin_left = 36.0
margin_top = 238.0
margin_right = 71.0
margin_bottom = 258.0
size_flags_horizontal = 4
text = "Join"

[node name="Status" type="Label" parent="VBox"]
margin_top = 358.0
margin_right = 108.0
margin_bottom = 372.0

[node name="Panel" type="Panel" parent="."]
visible = false
margin_left = 372.0
margin_top = 128.0
margin_right = 559.0
margin_bottom = 404.0

[node name="Players" type="RichTextLabel" parent="Panel"]
margin_right = 187.0
margin_bottom = 274.0

[node name="ReadyButton" type="Button" parent="Panel"]
margin_left = 65.0016
margin_top = 232.003
margin_right = 128.002
margin_bottom = 252.003
text = "Ready"
[connection signal="pressed" from="VBox/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="Panel/ReadyButton" to="." method="_on_ReadyButton_pressed"]
